--- a/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/2 Penguin.html
+++ b/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/2 Penguin.html
@@ -1,3 +1,60 @@
 <!-- Step 21
 Set the position property of the .back-mountain to prevent it from taking up space in the page layout. -->
 
+.back-mountain {
+  width: 300px;
+  height: 300px;
+  background: linear-gradient(rgb(203, 241, 228), rgb(47, 170, 255));
+  position: absolute;
+}
+
+
+<!-- Step 22
+Change the stack level of the .back-mountain element such that it is directly behind the .left-mountain element. -->
+
+.back-mountain {
+  width: 300px;
+  height: 300px;
+  background: linear-gradient(rgb(203, 241, 228), rgb(47, 170, 255));
+  position: absolute;
+  z-index: 1;
+}
+
+
+<!-- Step 23
+Rotate the .back-mountain element by 45deg clockwise. Then, give it a left property of 110px, and a top property of 225px. -->
+
+.back-mountain {
+  width: 300px;
+  height: 300px;
+  background: linear-gradient(rgb(203, 241, 228), rgb(47, 170, 255));
+  position: absolute;
+  z-index: 1;
+  transform: rotate(45deg);
+  left: 110px;
+  top: 225px;
+}
+
+
+<!-- Step 24
+To finish the background, add a sun, by creating a new div element immediately after the .back-mountain element, and give it the class of sun. -->
+
+  <body>
+    <div class="left-mountain"></div>
+    <div class="back-mountain"></div>
+    <div class="sun"></div>
+    <div class="penguin"></div>
+    <div class="ground"></div>
+  </body>
+
+
+<!-- Step 25
+Give the .sun element a width and height of 200px, and a background-color of yellow. -->
+
+.sun {
+  width: 200px;
+  height: 200px;
+  background-color: yellow;
+}
+
+
