--- a/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/2 Penguin.html
+++ b/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/2 Penguin.html
@@ -58,3 +58,63 @@ Give the .sun element a width and height of 200px, and a background-color of yel
 }
 
 
+<!-- Step 26
+Set the position property of the sun to prevent it from taking up space in the page layout, and set the border-radius such that the sun's shape is a circle. -->
+
+.sun {
+  width: 200px;
+  height: 200px;
+  background-color: yellow;
+  position: absolute;
+  border-radius: 50%;
+}
+
+
+<!-- Step 27
+Position the sun in the top right corner of the screen such that 75px of its top and right edges are off screen. -->
+
+.sun {
+  width: 200px;
+  height: 200px;
+  background-color: yellow;
+  position: absolute;
+  border-radius: 50%;
+  top: -75px;
+  right: -75px;
+}
+
+
+<!-- Step 28
+Your penguin will consist of two main sections: the head, and the body.
+Within .penguin, add two new div elements. The first with a class of penguin-head, and the second with a class of penguin-body. -->
+
+    <div class="penguin">
+      <div class="penguin-head"></div>
+      <div class="penguin-body"></div>
+    </div>
+
+
+<!-- Step 29
+Change the stack level of the .penguin element such that it appears in front of the .ground element, and give it a position of relative. -->
+
+.penguin {
+  width: 300px;
+  height: 300px;
+  margin: auto;
+  margin-top: 75px;
+  z-index: 4;
+  position: relative;
+}
+
+
+<!-- Step 30
+Target the .penguin-head element, and give it a width half of its parent's, and a height of 45%. 
+Then, set the background to a linear gradient at 45deg starting at gray, and ending at rgb(239, 240, 228). -->
+
+.penguin-head {
+  width: 50%;
+  height: 45%;
+  background: linear-gradient(45deg, gray, rgb(239, 240, 228));
+}
+
+
