--- a/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/3 Penguin.html
+++ b/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/3 Penguin.html
@@ -60,3 +60,52 @@ Give the .face elements a width of 60%, a height of 70%, and a background-color 
 	height: 70%;
   background-color: white;
 }
+
+
+<!-- Step 46
+Make the top corners of the .face elements have a radius of 70%, and the bottom corners have a radius of 60%. -->
+
+.face {
+  width: 60%;
+  height: 70%;
+  background-color: white;
+  border-radius: 70% 70% 60% 60%;
+}
+
+
+<!-- Step 47
+Position the .face elements so that they are 15% from the top. -->
+
+.face {
+  width: 60%;
+  height: 70%;
+  background-color: white;
+  border-radius: 70% 70% 60% 60%;
+  top: 15%;
+}
+
+
+<!-- Step 48
+Currently, the two .face elements are on top of each other.
+Fix this, by adding a class of left to the first .face element, and a class of right to the second .face element. -->
+
+      <div class="penguin-head">
+        <div class="face left"></div>
+        <div class="face right"></div>
+      </div>
+
+
+<!-- Step 49
+Target the .face element with the left class, and position it 5% left of its parent. -->
+
+.face.left {
+  left: 5%;
+}
+
+
+<!-- Step 50
+Target the .face element with the right class, and position it 5% right of its parent. -->
+
+.face.right {
+  right: 5%;
+}
