--- a/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/3 Penguin.html
+++ b/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/3 Penguin.html
@@ -109,3 +109,68 @@ Target the .face element with the right class, and position it 5% right of its p
 .face.right {
   right: 5%;
 }
+
+
+<!-- Step 51
+Below the .face.right element, add a div element with a class of chin. -->
+
+      <div class="penguin-head">
+        <div class="face left"></div>
+        <div class="face right"></div>
+        <div class="chin"></div>
+      </div>
+
+
+<!-- Step 52
+Target the .chin element, and give it a width of 90%, height of 70%, and background-color of white. -->
+
+.chin {
+  width: 90%;
+  height: 70%;
+  background-color: white;
+}
+
+
+<!-- Step 53
+Position the .chin element such that it is 25% from the top, and 5% from the left of its parent. 
+Then, give the top corners a radius of 70%, and the bottom corners a radius of 100%. -->
+
+.chin {
+  width: 90%;
+  height: 70%;
+  background-color: white;
+  top: 25%;
+  left: 5%;
+  border-radius: 70% 70% 100% 100%;
+}
+
+
+<!-- Step 54
+So far, the .face and .chin elements have the same background-color.
+Create a custom CSS property called --penguin-face, and set it to white. -->
+
+:root {
+  --penguin-face: white;
+}
+
+
+<!-- Step 55
+Where relevant, replace property values with your --penguin-face variable. -->
+
+.face {
+  width: 60%;
+  height: 70%;
+  background-color: var(--penguin-face);
+  border-radius: 70% 70% 60% 60%;
+  top: 15%;
+}
+
+.chin {
+  width: 90%;
+  height: 70%;
+  background-color: var(--penguin-face);
+  top: 25%;
+  left: 5%;
+  border-radius: 70% 70% 100% 100%;
+}
+
