--- a/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/4 Penguin.html
+++ b/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/4 Penguin.html
@@ -101,3 +101,49 @@ and 2% further from the left of its parent than .beak.top. -->
 	top: 65%;
 	left: 42%;
 }
+
+
+<!-- Step 71
+The penguin's body looks a bit plain. Spruce him up by adding a div element with a class of shirt, immediately before the .penguin-body element. -->
+
+<div class="shirt"></div>
+
+
+<!-- Step 72
+Within the .shirt element, add a div with the following emoji as content: 💜 -->
+
+      <div class="shirt">
+        <div>💜</div>
+      </div>
+
+
+<!-- Step 73
+Within .shirt, after the div element, add a p element with the following content: I CSS -->
+
+      <div class="shirt">
+        <div>💜</div>
+        <p>I CSS</p>
+      </div>
+
+
+<!-- Step 74
+Target the .shirt element, and set its font-size to 25px, font-family to Helvetica with a fallback of sans-serif, and font-weight to bold. -->
+
+.shirt {
+  font-size: 25px;
+  font-family: "Helvetica", sans-serif;
+  font-weight: bold;
+}
+
+
+<!-- Step 75
+If you look closely, the heart emoji is slightly different. This is because some of the character's properties were overridden by the font-weight style of bold.
+Fix this, by targeting the div with the heart emoji, and setting its font-weight to its original value. -->
+
+.shirt {
+  font: bold 25px Helvetica, sans-serif;
+}
+
+.shirt div {
+  font-weight: initial;
+}
