--- a/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/5 Penguin.html
+++ b/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/5 Penguin.html
@@ -81,3 +81,104 @@ Change the stacking order of the .foot elements such that they appear beneath th
   border-radius: 50%;
   z-index: -1;
 }
+
+
+<!-- Step 86
+Fun fact: Penguins cannot fly without wings.
+Within .penguin-body, before the .foot elements, add two div elements each with a class of arm. 
+Give the first .arm a class of left, and the second .arm a class of right. -->
+
+      <div class="penguin-body">
+        <div class="arm left"></div>
+        <div class="arm right"></div>
+        <div class="foot left"></div>
+        <div class="foot right"></div>
+      </div>
+
+
+<!-- Step 87
+Target the .arm elements, and give them a width of 30%, a height of 60%, and a background of linear gradient at 90deg from clockwise, 
+starting at gray, and ending at rgb(209, 210, 199). -->
+
+.arm {
+  width: 30%;
+  height: 60%;
+  background: linear-gradient(
+    90deg,
+		gray,
+		rgb(209, 210, 199)
+	);
+}
+
+
+<!-- Step 88
+Create a custom CSS variable named --penguin-skin, and set it to gray. Then, replace all relevant property values with it. -->
+
+:root {
+  --penguin-face: white;
+  --penguin-picorna: orange;
+  --penguin-skin: gray;
+}
+
+.penguin-head {
+  width: 50%;
+	height: 45%;
+  background: linear-gradient(
+    45deg,
+		var(--penguin-skin),
+		rgb(239, 240, 228)
+	);
+	border-radius: 70% 70% 65% 65%;
+  top: 10%;
+  left: 25%;
+  z-index: 1;
+}
+
+.penguin-body::before {
+  content: "";
+  position: absolute;
+  width: 50%;
+  height: 45%;
+  background-color: var(--penguin-skin);
+  top: 10%;
+  left: 25%;
+  border-radius: 0% 0% 100% 100%;
+  opacity: 70%;
+}
+
+.arm {
+  width: 30%;
+  height: 60%;
+  background: linear-gradient(
+    90deg,
+    var(--penguin-skin),
+    rgb(209, 210, 199)
+  );
+}
+
+
+<!-- Step 89
+Target the .arm element with a class of left, and position it 35% from the top, and 5% from the left of its parent. 
+Then, target the .arm element with a class of right, and position it 0% from the top, and -5% from the right of its parent. -->
+
+.arm.left {
+  top: 35%;
+  left: 5%;
+}
+
+.arm.right {
+  top: 0%;
+  right: -5%;
+}
+
+
+<!-- Step 90
+Within the .arm.left selector, alter the origin of the transform function to be the top left corner of its parent. -->
+
+.arm.left {
+  top: 35%;
+  left: 5%;
+  transform-origin: top left;
+}
+
+
