--- a/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/5 Penguin.html
+++ b/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/5 Penguin.html
@@ -182,3 +182,54 @@ Within the .arm.left selector, alter the origin of the transform function to be 
 }
 
 
+<!-- Step 91
+To keep the linear gradient on the correct side of the penguin's left arm, first rotate it by 130deg, then invert the x-axis. -->
+
+.arm.left {
+  top: 35%;
+  left: 5%;
+  transform-origin: top left; 
+  transform: rotate(130deg) scaleX(-1);
+}
+
+
+<!-- Step 92
+Rotate the right arm by 45deg counterclockwise. -->
+
+.arm.right {
+  top: 0%;
+  right: -5%;
+  transform: rotate(-45deg);
+}
+
+
+<!-- Step 93
+Fun fact: Most, if not all, flippers are not naturally rectangles.
+Give the .arm elements top -left, -right, and bottom-right corners a radius of 30%, and the bottom-left corner a radius of 120%. -->
+
+.arm {
+  width: 30%;
+  height: 60%;
+  background: linear-gradient(
+    90deg,
+    var(--penguin-skin),
+    rgb(209, 210, 199)
+  );
+  border-radius: 30% 30% 30% 120%;
+}
+
+
+<!-- Step 94
+Change the .arm elements' stacking order such that they appear behind the .penguin-body element. -->
+
+arm {
+  width: 30%;
+  height: 60%;
+  background: linear-gradient(
+    90deg,
+    var(--penguin-skin),
+    rgb(209, 210, 199)
+  );
+  border-radius: 30% 30% 30% 120%;
+  z-index: -1;
+}
