--- a/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/6 Penguin.html
+++ b/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/6 Penguin.html
@@ -3,6 +3,17 @@ Now, you are going to use CSS animations to make the penguin wave.
 
 Define a new @keyframes named wave. -->
 
-@keyframes wave {
+@keyframes wave {}
 
+
+<!-- Step 96
+Give wave four waypoints starting at 10%, and incrementing by 10%. -->
+
+@keyframes wave {
+  10% {top: ;}
+  20% {top: ;}
+  30% {top: ;}
+  40% {top: ;}
 }
+
+
