--- a/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/6 Penguin.html
+++ b/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/6 Penguin.html
@@ -86,3 +86,53 @@ Use the wave animation on the left arm. Have the animation last 3s, infinitely i
   animation-iteration-count: infinite;
   animation-timing-function: linear;
 }
+
+
+<!-- Step 101
+Target the .penguin element when it is active, and increase its size by 50% in both dimensions. -->
+
+.penguin:active {
+  transform: scale(1.5);
+}
+
+
+<!-- Step 102
+When you activate the .penguin element, it might look as though you can drag it around. This is not true.
+
+Indicate this to users, by giving the active element a cursor property of not-allowed. -->
+
+.penguin:active {
+  transform: scale(1.5);
+  cursor: not-allowed;
+}
+
+
+<!-- Step 103
+Change the .penguin element's transition behavior during transformation to have a duration of 1s, a timing function of ease-in-out, and a delay of 0ms. -->
+
+.penguin {
+  width: 300px;
+  height: 300px;
+  margin: auto;
+  margin-top: 75px;
+  z-index: 4;
+  position: relative;
+  transition: 1s;
+  transition-timing-function: ease-in-out;
+  transition-delay: 0ms;
+}
+
+
+<!-- Step 104
+Finally, calculate the height of the .ground element to be the height of the viewport minus the height of the .penguin element.
+
+Congratulations! You have completed the Responsive Web Design certification. -->
+
+.ground {
+  width: 100vw;
+  height: calc(100vh - 300px);
+  background: linear-gradient(90deg, rgb(88, 175, 236), rgb(182, 255, 255));
+  z-index: 3;
+  position: absolute;
+  margin-top: -58px;
+}
