--- a/Responsive Web Design(NEW)/18 CSS Animation by Building a Ferris Wheel/1 Ferris Wheel.html
+++ b/Responsive Web Design(NEW)/18 CSS Animation by Building a Ferris Wheel/1 Ferris Wheel.html
@@ -5,3 +5,76 @@ Add your meta element for the correct charset, your title element, and a link el
 
 Set the title to Ferris Wheel. -->
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" type="text/css" href="./styles.css" />
+    <title>Ferris Wheel</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+
+  <body>
+  </body>
+</html>
+
+
+<!-- Step 2
+Add a div within your body element and give it a class of wheel.
+
+Inside your new div, add six span elements with a class set to line, and six div elements with a class set to cabin. -->
+
+  <body>
+    <div class="wheel">
+      <span class="line"></span>
+      <span class="line"></span>
+      <span class="line"></span>
+      <span class="line"></span>
+      <span class="line"></span>
+      <span class="line"></span>
+      <div class="cabin"></div>
+      <div class="cabin"></div>
+      <div class="cabin"></div>
+      <div class="cabin"></div>
+      <div class="cabin"></div>
+      <div class="cabin"></div>
+    </div>
+  </body>
+
+
+<!-- Step 3
+Create a selector for your .wheel element. Start by setting the border to 2px solid black, the border-radius to 50%, and the margin-left to 50px. -->
+
+.wheel {
+  border: 2px solid black;
+  border-radius: 50%;
+  margin-left: 50px;
+}
+
+
+<!-- Step 4
+Set the position property of the .wheel selector to absolute. Set the height and width both to 55vw. -->
+
+.wheel {
+  border: 2px solid black;
+  border-radius: 50%;
+  margin-left: 50px;
+  position: absolute;
+  height: 55vw;
+  width: 55vw;
+}
+
+
+<!-- Step 5
+Give your .wheel selector a max-height and max-width property both set to 500px. -->
+
+.wheel {
+  border: 2px solid black;
+  border-radius: 50%;
+  margin-left: 50px;
+  position: absolute;
+  height: 55vw;
+  width: 55vw;
+  max-height: 500px;
+  max-width: 500px;
+}
