--- a/Responsive Web Design(NEW)/18 CSS Animation by Building a Ferris Wheel/1 Ferris Wheel.html
+++ b/Responsive Web Design(NEW)/18 CSS Animation by Building a Ferris Wheel/1 Ferris Wheel.html
@@ -153,3 +153,47 @@ Set the transform property for the third .line to rotate(120deg), the fourth to 
   transform: rotate(300deg);
 }
 
+
+<!-- Step 11
+Create a .cabin selector. Set the background-color to red, the width to 20%, and the height to 20%. -->
+
+.cabin {
+  background-color: red;
+  width: 20%;
+  height: 20%;
+}
+
+
+<!-- Step 12
+Give the .cabin a position of absolute, and a border of 2px solid. -->
+
+.cabin {
+  background-color: red;
+  width: 20%;
+  height: 20%;
+  position: absolute;
+  border: 2px solid;
+}
+
+
+<!-- Step 13
+Set the .cabin to have a transform-origin property of 50% 0%. 
+This will set the origin point to be offset 50% from the left and 0% from the top, placing it in the middle of the top edge of the element. -->
+
+.cabin {
+  background-color: red;
+  width: 20%;
+  height: 20%;
+  position: absolute;
+  border: 2px solid;
+  transform-origin: 50% 0%;
+}
+
+
+<!-- Step 14
+Time to position the cabins around the wheel. Select the first .cabin element. Set the right property to -8.5% and the top property to 50%. -->
+
+.cabin:nth-of-type(1) {
+  right: -8.5%;
+  top: 50%;
+}
