--- a/Responsive Web Design(NEW)/18 CSS Animation by Building a Ferris Wheel/2 Ferris Wheel.html
+++ b/Responsive Web Design(NEW)/18 CSS Animation by Building a Ferris Wheel/2 Ferris Wheel.html
@@ -105,3 +105,92 @@ The time should be specified in either seconds (s) or milliseconds (ms). Set you
   animation-name: wheel;
   animation-duration: 10s;
 }
+
+
+<!-- Step 21
+The animation-iteration-count property sets how many times your animation should repeat. This can be set to a number, or to infinite to indefinitely repeat 
+the animation. Your Ferris wheel should never stop, so set the .wheel selector to have an animation-iteration-count of infinite.
+
+The animation-timing-function property sets how the animation should progress over time. There are a few different values for this property, 
+but you want the Ferris wheel animation to run at the same rate from start to finish. Set the animation-timing-function to linear in your .wheel selector. -->
+
+.wheel {
+  border: 2px solid black;
+  border-radius: 50%;
+  margin-left: 50px;
+  position: absolute;
+  height: 55vw;
+  width: 55vw;
+  max-width: 500px;
+  max-height: 500px;
+  animation-name: wheel;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+
+<!-- Step 22
+Create another @keyframes rule with the name cabins. 
+Use the same properties as your @keyframes wheel, copying both the 0% and 100% rules, but set the transform property of the 100% selector to rotate(-360deg). -->
+
+@keyframes cabins {
+  0% {
+     transform: rotate(0deg);
+   }
+   100% {
+     transform: rotate(-360deg);
+   }
+}
+
+
+<!-- Step 23
+With your .wheel selector, you created four different properties to control the animation. 
+For your .cabin selector, you can use the animation property to set these all at once.
+
+Set the animation property of the .cabin rule to cabins 10s linear infinite. 
+This will set the animation-name, animation-duration, animation-timing-function, and animation-iteration-count properties in that order. -->
+
+.cabin {
+  background-color: red;
+  width: 20%;
+  height: 20%;
+  position: absolute;
+  border: 2px solid;
+  transform-origin: 50% 0%;
+  animation: cabins 10s linear infinite;
+}
+
+
+<!-- Step 24
+To make your cabin animation seem more like a natural swinging motion, you can use the ease-in-out timing function. 
+This setting will tell the animation to start and end at a slower pace, but move more quickly in the middle of the cycle.
+
+Replace linear to ease-in-out in the .cabin selector. -->
+
+.cabin {
+  background-color: red;
+  width: 20%;
+  height: 20%;
+  position: absolute;
+  border: 2px solid;
+  transform-origin: 50% 0%;
+  animation: cabins 10s ease-in-out infinite;
+}
+
+
+<!-- Step 25
+You can use @keyframes rules to control more than just the transformation of an element. 
+In the 0% selector of your @keyframes cabins, set the background-color to yellow. -->
+
+@keyframes cabins {
+  0% {
+    transform: rotate(0deg);
+    background-color: yellow;
+  }
+  100% {
+    transform: rotate(-360deg);
+  }
+}
+
+
